test/semantics/invalid/p3/IncompatibleTypeArgs.java
package invalid.p3;

import java.util.ArrayList;

public class IncompatibleTypeArgs {
	{
		ArrayList<String> al = new ArrayList<Object>();
	}
}
